--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.8",
-    "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-native": "0.73.4",
     "@react-native-async-storage/async-storage": "1.21.0",
-    "expo-sqlite": "~13.2.2"
+    "expo": "~50.0.8",
+    "expo-sqlite": "~13.2.2",
+    "expo-status-bar": "~1.11.1",
+    "firebase": "^10.8.1",
+    "react": "18.2.0",
+    "react-native": "0.73.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
