--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.8.2",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
-    "expo": "~50.0.8",
-    "expo-sqlite": "~13.2.2",
+    "expo": "^50.0.13",
+    "expo-sqlite": "^13.3.0",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.1",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "^0.73.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
